tests/lean/10488.lean.expected.out
2
31. : Float
10488.lean:5:10: error: missing exponent digits in scientific literal
10488.lean:7:10: error: missing exponent digits in scientific literal
10488.lean:9:7: error: unexpected identifier after decimal point; consider parenthesizing the number
10488.lean:11:7: error: unexpected identifier after decimal point; consider parenthesizing the number
10488.lean:13:7: error: unexpected identifier after decimal point; consider parenthesizing the number
Nat.toDigits 11 13 : List Char
['1', '2']
foo.x.snd.snd : Nat
{ x := (2, 4, 1) }
